adds list of repos to page

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </form>
 </section>
 <p id="js-error-message"></p>
-<section class="hidden">
+<section id="results" class="hidden">
     <h2>Results</h2>
     <ul id="results-list">
     </ul>
